@@ -14,6 +14,7 @@ import tempfile
 import shutil
 import subprocess
 import shlex
+import multiprocessing
 
 ##################################################
 #### Global variables
@@ -45,6 +46,7 @@ comp_versions = dict ()
 
 release_date = strftime (# ie: Mon Jan 23 00:35:37 CST 2006
                               "%a %b %d %H:%M:%S %Z %Y")
+cpu_count = multiprocessing.cpu_count()
 
 # Packaging configuration
 
@@ -907,6 +909,7 @@ def generate_workspaces (stage_dir):
     # Create option strings
     mpc_command = os.path.join (stage_dir, "ACE_wrappers", "bin", "mwc.pl")
     exclude_option = ' -exclude TAO/TAO_*.mwc,TAO/CIAO/CIAO_*.mwc '
+    workers_option = ' -workers ' + cpu_count
     mpc_option = ' -recurse -hierarchy -relative ACE_ROOT=' + stage_dir + '/ACE_wrappers '
     mpc_option += ' -relative TAO_ROOT=' + stage_dir + '/ACE_wrappers/TAO '
     mpc_option += ' -relative CIAO_ROOT=' + stage_dir + '/ACE_wrappers/TAO/CIAO '
@@ -920,13 +923,13 @@ def generate_workspaces (stage_dir):
         redirect_option = " >> ../mpc.log 2>&1"
 
     print "\tGenerating GNUmakefiles...."
-    ex (mpc_command + " -type gnuace " + exclude_option + mpc_option + redirect_option)
+    ex (mpc_command + " -type gnuace " + exclude_option + workers_option + mpc_option + redirect_option)
 
     print "\tGenerating VC10 solutions..."
-    ex (mpc_command + " -type vc10 " + mpc_option + vc10_option + redirect_option)
+    ex (mpc_command + " -type vc10 " + mpc_option + workers_option + vc10_option + redirect_option)
 
     print "\tGenerating VC9 solutions..."
-    ex (mpc_command + " -type vc9 " + mpc_option + vc9_option + redirect_option)
+    ex (mpc_command + " -type vc9 " + mpc_option + workers_option + vc9_option + redirect_option)
 
     print "\tCorrecting permissions for all generated files..."
     ex ("find ./ -name '*.vc[p,w]' -or -name '*.bmak' -or -name '*.vcproj' -or -name '*.sln' -or -name '*.vcxproj' -or -name '*.filters' -or -name 'GNUmake*' | xargs chmod 0644")
